--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "marked": "^17.0.1",
     "mongoose": "^9.1.6",
     "sanitize-html": "^2.17.0",
-    "turndown": "^7.2.2"
+    "turndown": "^7.2.2",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
